# lectify

./: .env.example  .gitignore  Dockerfile.tests  README.md  alembic.ini.test  config.cfg.example  docker-compose.test.yml  docker-compose.yml  main.py  package-lock.json  package.json  pytest.ini  requirements.txt  run_tests.sh
alembic/: env.py
utils/codegen/: pyproject.toml  setup.py
utils/codegen/src/: cli.py  context.py  settings.py  utils.py
utils/codegen/src/config/: loader.py  models.py
utils/codegen/src/generators/: base.py  db.py  dockerfile.py  grpc_client.py  grpc_server.py  main.py  requirements.py  runner.py  s3.py  settings.py  vault.py
utils/codegen/src/generators/infra/: base.py  minio.py  postgres.py
utils/codegen/src/generators/services/: base.py  db.py  dockerfile.py  grpc_client.py  grpc_server.py  main.py  requirements.py  s3.py  settings.py  vault.py
utils/codegen/src/migrations/: __init__.py  alembic_helper.py  alembic_template.py  constants.py  finder.py  manager.py  migration_executor.py  migration_parser.py  migration_renderer.py  migrations_manager.py  models.py  patterns.py  schema_builder.py  schema_comparator.py  utils.py
utils/codegen/src/templates/: __init__.py
utils/codegen/src/templates/dockerfile/: Dockerfile.j2
utils/codegen/src/templates/grpc/server/: grpc_app.py.j2  grpc_server.py.j2
utils/codegen/src/templates/infra/minio/: init-script.sh.j2
utils/codegen/src/templates/main/: Makefile.j2  main.py.j2
utils/codegen/src/templates/s3/: s3.py.j2
utils/codegen/src/templates/settings/: base.py.j2  settings.py.j2
(+282 files in other folders)
